# gDiagram

./: README.md  meson.build
data/: meson.build  org.gnome.gDiagram.gresource.xml
data/ui/: main-window.ui
docs/: FINAL_SUMMARY.md
examples/: MERMAID_EXAMPLES.md
src/: Application.vala  meson.build
src/core/: DiagramTemplates.vala
src/core/ast/: DiagramNode.vala  MermaidDiagram.vala
src/core/parser/: ActivityDiagramParser.vala  ComponentDiagramParser.vala  Lexer.vala  Parser.vala
src/core/parser/activity/: ActivityActionParser.vala  ActivityControlFlowParser.vala  ActivityEdgeParser.vala  ActivityMetadataParser.vala  ActivityParserUtils.vala  ActivityStructureParser.vala  ActivityTextFormatter.vala
src/core/parser/mermaid/: MermaidClassParser.vala  MermaidFlowchartParser.vala  MermaidLexer.vala  MermaidSequenceParser.vala  MermaidStateParser.vala  MermaidToken.vala
src/core/renderer/: GraphvizRenderer.vala  RenderUtils.vala
src/core/renderer/behavioral/: ActivityDiagramRenderer.vala  StateDiagramRenderer.vala  UseCaseDiagramRenderer.vala
src/core/renderer/mermaid/: MermaidClassRenderer.vala  MermaidFlowchartRenderer.vala  MermaidSequenceRenderer.vala  MermaidStateRenderer.vala
src/core/renderer/sequence/: SequenceDiagramRenderer.vala
src/core/renderer/specialized/: DeploymentDiagramRenderer.vala  ERDiagramRenderer.vala  MindMapDiagramRenderer.vala
src/core/renderer/structural/: ClassDiagramRenderer.vala  ComponentDiagramRenderer.vala  ObjectDiagramRenderer.vala
src/ui/: DocumentView.vala  MainWindow.vala  PreviewPane.vala
src/util/: Debouncer.vala
