sources = files(
  'main.vala',
  'Application.vala',
  'ui/MainWindow.vala',
  'ui/DocumentView.vala',
  'ui/PreviewPane.vala',
  'ui/PreferencesDialog.vala',
  'ui/AIAssistantDialog.vala',
  'ui/DiagramCompareDialog.vala',
  'ui/ExportDialog.vala',
  'core/Document.vala',
  'core/parser/Token.vala',
  'core/parser/Lexer.vala',
  'core/parser/Parser.vala',
  'core/parser/Preprocessor.vala',
  'core/parser/mermaid/MermaidToken.vala',
  'core/parser/mermaid/MermaidLexer.vala',
  'core/parser/mermaid/MermaidFlowchartParser.vala',
  'core/parser/ClassDiagramParser.vala',
  'core/parser/ActivityDiagramParser.vala',
  'core/parser/activity/ActivityTextFormatter.vala',
  'core/parser/activity/ActivityParserUtils.vala',
  'core/parser/activity/ActivityEdgeParser.vala',
  'core/parser/activity/ActivityActionParser.vala',
  'core/parser/activity/ActivityControlFlowParser.vala',
  'core/parser/activity/ActivityStructureParser.vala',
  'core/parser/activity/ActivityMetadataParser.vala',
  'core/parser/UseCaseDiagramParser.vala',
  'core/parser/StateDiagramParser.vala',
  'core/parser/ComponentDiagramParser.vala',
  'core/parser/ObjectDiagramParser.vala',
  'core/parser/DeploymentDiagramParser.vala',
  'core/parser/ERDiagramParser.vala',
  'core/parser/MindMapDiagramParser.vala',
  'core/ast/DiagramNode.vala',
  'core/ast/Theme.vala',
  'core/ast/ClassDiagram.vala',
  'core/ast/ActivityDiagram.vala',
  'core/ast/UseCaseDiagram.vala',
  'core/ast/StateDiagram.vala',
  'core/ast/ComponentDiagram.vala',
  'core/ast/ObjectDiagram.vala',
  'core/ast/DeploymentDiagram.vala',
  'core/ast/ERDiagram.vala',
  'core/ast/MindMapDiagram.vala',
  'core/ast/MermaidDiagram.vala',
  'core/renderer/GraphvizRenderer.vala',
  'core/renderer/RenderUtils.vala',
  'core/renderer/sequence/SequenceDiagramRenderer.vala',
  'core/renderer/structural/ClassDiagramRenderer.vala',
  'core/renderer/structural/ComponentDiagramRenderer.vala',
  'core/renderer/structural/ObjectDiagramRenderer.vala',
  'core/renderer/behavioral/ActivityDiagramRenderer.vala',
  'core/renderer/behavioral/UseCaseDiagramRenderer.vala',
  'core/renderer/behavioral/StateDiagramRenderer.vala',
  'core/renderer/specialized/DeploymentDiagramRenderer.vala',
  'core/renderer/specialized/ERDiagramRenderer.vala',
  'core/renderer/specialized/MindMapDiagramRenderer.vala',
  'util/Debouncer.vala',
  'services/AIService.vala',
)

sources += config_file

resources = gnome.compile_resources(
  'gdiagram-resources',
  join_paths(meson.project_source_root(), 'data', 'org.gnome.gDiagram.gresource.xml'),
  source_dir: join_paths(meson.project_source_root(), 'data'),
  c_name: 'gdiagram',
)

executable('gdiagram',
  sources,
  resources,
  dependencies: [
    gtk4_dep,
    libadwaita_dep,
    gtksourceview_dep,
    gee_dep,
    libgvc_dep,
    librsvg_dep,
    cairo_dep,
    soup_dep,
    json_dep,
  ],
  install: true,
)
